//Generate: protoc --gogo_out=. -I=.:../../../dependencies/code.google.com/p/gogoprotobuf/gogoproto:../../../dependencies/code.google.com/p/gogoprotobuf/protobuf event.proto
package pb;

import "gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message Event {

  optional int64  time = 1;
  optional string state = 2;
  optional string service = 3;
  optional string host = 4;
  optional string description = 5;
  repeated string tags = 7;
  optional float  ttl = 8;

  optional sint64 metric_sint64 = 13;
  optional double metric_d = 14;
  optional float metric_f = 15;

  optional string tsdb_service = 16;
  repeated string tsdb_tags = 17;

  optional string source_uuid = 18;
  optional string org_uuid = 19;

}

message Message {

  repeated Event events = 6;

  optional string data = 7;
  optional string data_type = 8;

}
